--- a/_config.yml
+++ b/_config.yml
@@ -60,32 +60,41 @@ plugins:
 author:
   name   : "Project Hindawi"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "An inclusive rural digitalization platform inspired by the principles of GramSheel."
+  bio    : "Programming in your Mother Tongue"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      icon: "fab fa-fw fa-facebook"
+      url: "https://www.facebook.com/Hindawi-Programming-System-196804757588931"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
     - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/company/%E0%A4%B9%E0%A4%BF%E0%A4%82%E0%A4%A6%E0%A4%B5%E0%A5%80"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label: "Advisors"
+      icon: "fas fa-fw fa-award"
+      url: "/advisors/"
+    - label: "Team"
+      icon: "fas fa-fw fa-users-cog"
+      url: "/team/"
+    - label: "Partners"
+      icon: "fas fa-fw fa-handshake"
+      url: "/partners/"
+    - label: "License"
+      icon: "fas fa-fw fa-file-contract"
+      url: "/license/"
+    - label: "Privacy Policy"
+      icon: "fas fa-fw fa-mask"
+      url: "/privacy/"
+    - label: "Term & Conditions"
+      icon: "fas fa-fw fa-balance-scale-right"
+      url: "/terms/"
 
 defaults:
   # _pages
