--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,8 +23,8 @@ main:
   - title: Education
     url: /education/
 
-  - title: Healthcare & Biosciences
-    url: /health/
+  - title: Innovations in Hindawi
+    url: /innovations/
 
   - title: Justice
     url: /justice/
