--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,9 +26,7 @@ main:
   - title: Innovations in Hindawi
     url: /innovations/
 
-  - title: Justice
-    url: /justice/
-  - title: Peace
+  - title: Learning Resources
     url: /peace/
   - title: "Categories"
     url: /categories/
