--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,8 @@ main:
 
   - title: Learning Resources
     url: /resources/
+  - title: Releases
+    url: /releases/
  
 
   - title: Innovations in Hindawi
