--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
   - title: Recognitions
     url: /recognitions/
 
+ - title: Frequently Asked Questions
+    url: /faqs/
+
   - title: Learning Resources
     url: /resources/
   - title: Releases
