--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Project Hindawi
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Hindawi is an open-source, complete non-English based systems programming platform supporting all paradigms of programming languages from assembly language   to logic and functional programming, which effectively shatters the language barrier allowing non English literates to take up computer sciences and revolution   at all levels of technology, from primary school education to robotics and super-computing in their mother tongue, without the need to master English.
-
- It is a suite of open-source Indic programming languages. It includes compilers for the equivalents of C, C++, lex, yacc, assembly, BASIC, Ada etc. in Hindi,     Bangla, Gujrati, Assomiya, Nepali and other Indian languages. These localized programming languages are known as Shaili, e.g. Indic C is Shaili Guru, Indic       C++   is Shaili Shraenibadha, Indic Assembly is Shaili Yantrik and so on.
+  Hindawi is an open-source, complete non-English based systems programming platform supporting all paradigms of programming languages from assembly language   to logic and functional programming, which effectively shatters the language barrier allowing non English literates to take up computer sciences and revolution   at all levels of technology, from primary school education to robotics and super-computing in their mother tongue, without the need to master English.<br>
+  It is a suite of open-source Indic programming languages. It includes compilers for the equivalents of C, C++, lex, yacc, assembly, BASIC, Ada etc. in Hindi,     Bangla, Gujrati, Assomiya, Nepali and other Indian languages. These localized programming languages are known as Shaili, e.g. Indic C is Shaili Guru, Indic       C++   is Shaili Shraenibadha, Indic Assembly is Shaili Yantrik and so on.
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: aqua
